# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testausdokumentti.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
dokumentaatio/kuvat/: controls  koira  vibr
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/poetry-testi/: pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: controls.py  envelope.py  fx.py  main.py  oscillator.py  sql_schema.py  testi.py  tuner.py  ui.py  visuals.py  waves_mixer.py
src/signal_prosessing/: envelope.py  oscillator.py  tuner.py
src/tests/: pysynth_test.py
src/user_interface/: controls.py  keyboard.py
viikko1/: gitlog.txt
