[tool.poetry]
name = "ot-harjoitustyo"
version = "0.1.0"
description = ""
authors = ["Paul <paul.m.sainio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
mido = "^1.2.10"
numpy = "^1.22.3"
pytest = "^7.1.1"
invoke = "^1.7.0"
gensound = "^0.5.3"
tk = "^0.1.0"

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"
pylint = "^2.13.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
